<resources>
    <string name="app_name">Galos</string>
    <string name="exists_login">Логин уже используется</string>
    <string name="exists_email">Почта уже используется</string>
    <string name="match_passwords">Пароли не совпадают</string>
    <string name="information_update">Информация успешно изменена</string>
    <string name="incorrect_current_password">Неверный текущий пароль</string>
    <string name="match_mail">Новая и текущая почты не должны совпадать</string>
    <string name="match_password">Новый и текущий пароли не должны совпадать</string>
    <string name="incorrect_login_or_password">Неверный логин или пароль</string>
    <string name="wrong_data">Некорректные данные</string>
    <string name="password">Пароль</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="registration">Регистрация</string>
    <string name="login_as_guest">Войти как гость</string>
    <string name="login">Логин</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="enter_e_mail">Введите почту</string>
    <string name="go_to_the_menu">Вернуться в главное меню</string>
    <string name="use_the_bonus">Вы можете использовать бонус:</string>
    <string name="title_record_text_view">Рекорд:</string>
    <string name="title_money_text_view">Деньги:</string>
    <string name="help_image_button_text_view">Помощь</string>
    <string name="sound_image_button_text_view">Звук\nвкл/выкл</string>
    <string name="rating_image_button_text_view">Рейтинг игроков</string>
    <string name="achievements_image_button_text_view">Достижения</string>
    <string name="exit_image_button_text_view">Вернуться к авторизации</string>
    <string name="settings_image_button_text_view">Настройки аккаунта</string>
    <string name="title_game">GALOS</string>
    <string name="title_achievements">ДОСТИЖЕНИЯ</string>
    <string name="back_image_button">Вернуться</string>
    <string name="title_editaccinf">НАСТРОЙКИ АККАУНТА</string>
    <string name="current_password_text_view">Текущий пароль</string>
    <string name="new_password_text_view">Новый пароль</string>
    <string name="new_mail_text_view">Новая почта</string>
    <string name="accept_text_view">Подтвердить изменения</string>
    <string name="pause_image_button">пауза</string>
    <string name="score_text_view">Счёт:</string>
    <string name="game_paused_text_view">Игра приостановлена</string>
    <string name="life_bonus_description_texi_view">Этот бонус позволяет вам переиграть уровень после поражения без потери счёта. Эффект от бонуса заканчивается после вашей победы или поражения. Не суммируется.</string>
    <string name="deceleration_bonus_description_text_view">Этот бонус позволяет вам понизить скорость врагов. Эффект от бонуса заканчивается после вашей победы или поражения. Не суммируется.</string>
    <string name="growth_bonus_description_text_view">Этот бонус позволяет вам увеличить ваш размер. Эффект от бонуса заканчивается после вашей победы или поражения. Суммируется.</string>
    <string name="todo">TODO</string>
    <string name="action_settings">todo</string>
    <string name="login_text_view">Войти</string>
    <string name="registration_text_view">Создать новый аккаунт</string>
    <string name="create_account_text_view">Создать аккаунт</string>
    <string name="exit_main_menu_text_view">Вернуться в главное меню</string>
    <string name="not_received">Не получено</string>
    <string name="received">Получено</string>
    <string name="reward">Награда:</string>
    <string name="bonus_used">Бонус активирован</string>
    <string name="bonus_alredy_used">Бонус уже активирован</string>
    <string name="not_enough_money">Недостаточно денег</string>
    <string name="remember_user">Запомнить</string>
    <string name="progress_achievements">Достижений:</string>
    <string name="help_title_text_view">Помощь</string>
    <string name="contact_text_view">Для связи с разработчиком:</string>
    <string name="mail_text_view">vk.com/exilles</string>
    <string name="rating_bar_text_view">РЕЙТИНГ</string>
    <string name="number_bar_text_view">№</string>
    <string name="login_bar_text_view">ИМЯ</string>
    <string name="record_bar_text_view">РЕКОРД</string>
    <string-array name="title_achievements">
        <item>Новичёк</item>
        <item>Знаток</item>
        <item>Профи</item>
        <item>Мастер</item>
        <item>Гений</item>
        <item>Высший разум</item>
        <item>Начало положено!</item>
        <item>Тернистый путь</item>
        <item>Длинная тропа</item>
        <item>Без преград</item>
        <item>Дегустатор</item>
        <item>Вкуснятина</item>
        <item>Обжора</item>
        <item>Чёрная дыра</item>
        <item>Хоть что-то…</item>
        <item>Хорошие деньги</item>
        <item>Бабосики</item>
        <item>Жаль, что не реал…</item>
        <item>Бережливый</item>
        <item>Экономный</item>
        <item>Еврейская душа</item>
        <item>Победитель</item>
        <item>Звезда</item>
        <item>Гладиатор</item>
        <item>Чемпион</item>
        <item>Бог</item>
    </string-array>
    <string-array name="description_achievements">
        <item>Пройдите 5 уровней подряд</item>
        <item>Пройдите 15 уровней подряд</item>
        <item>Пройдите 30 уровней подряд</item>
        <item>Пройдите 60 уровней подряд</item>
        <item>Пройдите 120 уровней подряд</item>
        <item>Пройдите 250 уровней подряд</item>
        <item>Сыграйте в свой первый уровень</item>
        <item>Сыграйте в 50 уровней</item>
        <item>Сыграйте в 200 уровней</item>
        <item>Сыграйте в 500 уровней</item>
        <item>Поглотите 1 круг</item>
        <item>Поглотите 50 кругов</item>
        <item>Поглотите 300 кругов</item>
        <item>Поглотите 700 кругов</item>
        <item>Заработайте 20 баксов за всю игру</item>
        <item>Заработайте 200 баксов за всю игру</item>
        <item>Заработайте 600 баксов за всю игру</item>
        <item>Заработайте 3000 баксов за всю игру</item>
        <item>Накопите 200 баксов</item>
        <item>Накопите 1000 баксов</item>
        <item>Накопите 3000 баксов</item>
        <item>Победите в первом уровне</item>
        <item>Победите в 50 уровнях</item>
        <item>Победите в 200 уровнях</item>
        <item>Победите в 700 уровнях</item>
        <item>Получите все достижения</item>
    </string-array>
    <string-array name="reward_achievements">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>250</item>
        <item>5</item>
        <item>25</item>
        <item>100</item>
        <item>250</item>
        <item>5</item>
        <item>25</item>
        <item>150</item>
        <item>350</item>
        <item>5</item>
        <item>50</item>
        <item>150</item>
        <item>750</item>
        <item>50</item>
        <item>250</item>
        <item>750</item>
        <item>5</item>
        <item>20</item>
        <item>50</item>
        <item>175</item>
        <item>5000</item>
    </string-array>
    <string-array name="titles_help">
        <item>ОБ ИГРЕ</item>
        <item>ЦЕЛЬ ИГРЫ</item>
        <item>УПРАВЛЕНИЕ</item>
        <item>РЕКОРД</item>
        <item>СМЕШАННЫЙ</item>
        <item>ОЧЕРЕДЬ</item>
        <item>ДОГОНЯЛКИ</item>
        <item>НЕВИДИМКИ</item>
        <item>БОНУСЫ</item>
    </string-array>
    <string-array name="descriptions_help">
        <item>
            Galos - это аркадная одиночная игра в духе многими известной Agar.io.\nВы управляете кругом, поглащая другие более
            маленькие круги и прибавляя в размере.\nДвижение всех кругов происходит лишь тогда, когда вы перемещаете свой
            круг!\nИграйте в различные режимы, зарабатывайте достижения, устанавливайте свои рекорды, используйте различные бонусы,
            чтобы быстрее и увереннее проходить уровни!
        </item>
        <item>
            Цель игры Galos заключается в полном доминировании на игровом поле!\nА именно, вам нужно поглотить все круги, которые
            можно поглотить, и при этом не столкнуться с более крупным кругом, или с неуязвимым (красным) кругом.\nКруги, которые
            можно смело поглощать (их радиус меньше вашего) меняют свой цвет на более светлый, а те круги, которых вам нужно избегать
            (их радиус больше вашего), они темного цвета.\nТакже вам всегда нужно избегать неуязвимых (красных кругов), потому что их
            поглотить нельзя!
        </item>
        <item>
            Для перемещения вашего (серого) круга, нужно нажать пальцем в какую-либо точку на экране вашего мобильного устройства, после этого
            ваш (серый) круг переместиться в этом направлении.\nЕсли вы будете постоянно водить пальцем по экрану, то ваш (серый) круг будет перемещаться
            за ним, но будьте осторожны, ведь в этот момент все круги будут активно перемещаться и вы можете не уследить за ходом игры!
            Поэтому лучше делать перерывы между действиями, чтобы продумывать ваше следующее перемещение!\nВажной особенностью является то,
            что чем дальше вы тыкнете от вашего круга, тем быстрее он переместиться к этой точке, и соответственно, чем ближе вы ткнете к
            вашему кругу, тем медленнее он переместится к этой точке. Это можно использовать для медленного или очень быстрого перемещения!
        </item>
        <item>
            Рекорд - является основным показателем вашей крутости в этой игре! Чем больше рекорд, тем вы круче!\nУвеличивать этот
            показатель можно, играя в рейтинговый режим (большой чёрный круг в главном игровом меню). Этот игровой режим отличается
            от остальных тем, что в нём один за другим запускаются разные игровые режимы, сначала "Смешанный", затем "Очередь",
            "Догонялки" и "Невидимки"!\nВаш самый наибольший счёт в этом игровом режиме и будет вашим игровым рекордом, который
            может быть отображен в рейтинге игроков, если вы авторизируетесь в игре не как "Гость".
        </item>
        <item>
            Смешанный - это игровой режим, который включает в себя все типы кругов, которые могут вам встретиться в игре Galos.
            \nВраги на уровне генерируются случайным образом, поэтому какие-то уровни будут сложнее, а какие-то легче.
        </item>
        <item>
            Очередь - это игровой режим, в котором вам нужно поочередно поглотить один круг за другим, уклоняясь от неуязвимых
            (красных) кругов.\nВраги на уровне генерируются случайным образом, поэтому какие-то уровни будут сложнее, а какие-то
            легче.
        </item>
        <item>
            Догонялки - это игровой режим, в котором вам нужно поглотить один маленький круг, уклоняясь от огромного количества
            неуязвимых (красных) кругов.\nВраги на уровне генерируются случайным образом, поэтому какие-то уровни будут сложнее, а какие-то
            легче.
        </item>
        <item>
            Невидимки - это игровой режим, в котором вам нужно поглотить все исчезающие (синие) круги, уклоняясь от неуязвимых
            (красных) кругов.\nВраги на уровне генерируются случайным образом, поэтому какие-то уровни будут сложнее, а какие-то
            легче.
        </item>
        <item>
            Чтобы посмотреть список бонусов, нужно вызвать меню паузы во время игрового процесса. На выбор предоставляется 3 разных бонуса,
            которые сильно влияют на ход игры.\nКаждый бонус имеет свою цену, которая указана ниже его иконки.\nБонусы помогут вам пройти
            сложный уровень, а также сохранить ваш счёт, если вдруг вас загонят в ловушку.\nНекоторые уровни невозможно пройти без
            бонусов, поэтому используйте их с умом!
        </item>
    </string-array>
</resources>
